Tolerante a fallas/IstioMesh/Proyecto/dep-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jonathan-garcia-istio-deployment
  labels:
    app: jonathangarciaistio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jonathangarciaistio
  template:
    metadata:
      labels:
        app: jonathangarciaistio
    spec:
      containers:
      - name: jonathangarciaistio
        image: Xinoji/test_istio:1.0
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: jonathan-garcia-istio-service
  labels:
    app: jonathan-garcia-istio-service
spec:
  selector:
    app: jonathangarciaistio
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  sessionAffinity: None
