Tolerante a fallas/IstioMesh/Proyecto/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apis-service-ingress
spec:
  hosts: 
  - '*'
  gateways:
  - apis-gateway
  http:
  - match:
    - uri:
        prefix: /v1/
    rewrite:
        uri: /
    route:
    - destination:
        host: jonathan-garcia-kubernetes-service
        port:
          number: 8000
  - match:
    - uri:
        prefix: /v2/
    rewrite:
        uri: /
    route:
    - destination:
        host: jonathan-garcia-istio-service
        port: 
          number: 8000
